style: fix style on dark mode.

--- a/src/ui/views/Dashboard/components/RecentConnections/style.less
+++ b/src/ui/views/Dashboard/components/RecentConnections/style.less
@@ -266,7 +266,7 @@
   }
   .ant-modal {
     &-content {
-      background-color: #fff;
+      background-color: var(--r-neutral-bg-1,#fff);
     }
   }
   .ant-modal-body {
@@ -296,6 +296,7 @@
     line-height: 22px;
     text-align: center;
     color: var(--r-neutral-body, #D3D8E0);
+    background-color: transparent !important;
     padding: 0;
     margin: 0;
     min-height: initial;
